feat: retrieval test.

--- a/mycode/test_api2.ipynb
+++ b/mycode/test_api2.ipynb
@@ -7,6 +7,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# from ragflow_sdk import RAGFlow\n",
+    "import sys\n",
+    "sys.path.append(\"/Users/ycy/PycharmProjects/hw/ragflow/sdk/python/\")\n",
     "from ragflow_sdk import RAGFlow\n",
     "\n",
     "rag_object = RAGFlow(api_key=\"ragflow-FmMTM1OTNhNjkzNTExZjA5ZjA3MDI0Mm\", base_url=\"http://127.0.0.1\")"
@@ -15,6 +18,17 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "40d064f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# set the dataset we research on\n",
+    "dataset_name = 'musique'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "8e12536b",
    "metadata": {},
    "outputs": [
@@ -22,152 +36,74 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'avatar': '', 'chunk_count': 87, 'chunk_method': 'naive', 'description': None, 'document_count': 6, 'embedding_model': 'text-embedding-3-small@OpenAI', 'id': 'd63690cc6edf11f0b3df0242ac180003', 'name': 'nianjin', 'pagerank': 0, 'parser_config': {'auto_keywords': 0, 'auto_questions': 0, 'chunk_token_num': 512, 'delimiter': '\\n', 'graphrag': {'use_graphrag': False}, 'html4excel': False, 'layout_recognize': 'Plain Text', 'raptor': {'use_raptor': False}}, 'permission': 'me', 'tenant_id': '34bdfbec68cf11f080d70242ac180006'}\n",
+      "nianjin d63690cc6edf11f0b3df0242ac180003\n",
+      "musique 44bfe99268cf11f0a7220242ac180006\n",
       "{'avatar': '', 'chunk_count': 35, 'chunk_method': 'naive', 'description': None, 'document_count': 23, 'embedding_model': 'text-embedding-3-small@OpenAI', 'id': '44bfe99268cf11f0a7220242ac180006', 'name': 'musique', 'pagerank': 0, 'parser_config': {'auto_keywords': 0, 'auto_questions': 0, 'chunk_token_num': 512, 'delimiter': '\\n', 'graphrag': {'community': False, 'entity_types': ['organization', 'person', 'geo', 'event', 'category'], 'method': 'light', 'resolution': True, 'use_graphrag': True}, 'html4excel': False, 'layout_recognize': 'Plain Text', 'raptor': {'use_raptor': False}}, 'permission': 'me', 'tenant_id': '34bdfbec68cf11f080d70242ac180006'}\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<ragflow_sdk.modules.dataset.DataSet at 0x105cc7530>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# list dataset\n",
-    "\n",
+    "datasets_dict = {}\n",
     "for dataset in rag_object.list_datasets():\n",
-    "    print(dataset)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "94497972",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'avatar': '', 'chunk_count': 87, 'chunk_method': 'naive', 'description': None, 'document_count': 6, 'embedding_model': 'text-embedding-3-small@OpenAI', 'id': 'd63690cc6edf11f0b3df0242ac180003', 'name': 'nianjin', 'pagerank': 0, 'parser_config': {'auto_keywords': 0, 'auto_questions': 0, 'chunk_token_num': 512, 'delimiter': '\\n', 'graphrag': {'use_graphrag': False}, 'html4excel': False, 'layout_recognize': 'Plain Text', 'raptor': {'use_raptor': False}}, 'permission': 'me', 'tenant_id': '34bdfbec68cf11f080d70242ac180006'}\n"
-     ]
-    }
-   ],
-   "source": [
-    "# list dataset by id\n",
+    "    datasets_dict[dataset.name] = dataset\n",
+    "    print(dataset.name, dataset.id)\n",
+    "    \n",
+    "dataset = datasets_dict[dataset_name]\n",
     "\n",
-    "datasets = rag_object.list_datasets(id = \"44bfe99268cf11f0a7220242ac180006\")\n",
-    "datasets = rag_object.list_datasets(id = \"d63690cc6edf11f0b3df0242ac180003\")\n",
-    "\n",
-    "print(datasets[0])\n",
-    "dataset = datasets[0]"
+    "print(dataset)\n",
+    "dataset"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "4426677a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file_path = \"test.jsonl\" \n",
-    "# file_path = \"merged_musique.jsonl\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "56f294cd",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "# upload documents to dataset\n",
-    "import json\n",
-    "import tempfile\n",
-    "import os\n",
-    "\n",
-    "documents = []\n",
-    "\n",
-    "cnt = 0\n",
-    "with open(file_path, \"r\", encoding=\"utf-8\") as f:\n",
-    "    for idx, line in enumerate(f):\n",
-    "        data = json.loads(line.strip())\n",
-    "        combined_text = f\"{data['title']}\\n{data['paragraph_text']}\"\n",
-    "\n",
-    "        # 创建临时文件\n",
-    "        with tempfile.NamedTemporaryFile(\"w+\", delete=False, suffix=\".txt\", encoding=\"utf-8\") as tmp_file:\n",
-    "            tmp_file.write(combined_text)\n",
-    "            tmp_file_path = tmp_file.name\n",
-    "\n",
-    "        # 读取为二进制上传\n",
-    "        with open(tmp_file_path, \"rb\") as bfile:\n",
-    "            documents.append({\n",
-    "                \"display_name\": f\"{idx}.txt\",\n",
-    "                \"blob\": bfile.read()\n",
-    "            })\n",
-    "\n",
-    "        # 删除临时文件\n",
-    "        os.remove(tmp_file_path)\n",
-    "        cnt += 1\n",
-    "\n",
-    "# 上传到 dataset\n",
-    "dataset.upload_documents(documents)\n",
-    "print()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "f5e54ad5",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Update finished\n"
-     ]
-    }
-   ],
-   "source": [
-    "# update documents to set meta_fields and chunk_method\n",
-    "\n",
-    "with open(file_path, \"r\", encoding=\"utf-8\") as f:\n",
-    "    raw_data = [json.loads(line.strip()) for line in f]\n",
-    "\n",
-    "# 获取所有文档\n",
-    "docs = dataset.list_documents()\n",
-    "\n",
-    "# 遍历每个文档并添加 metadata（如果没有）\n",
-    "for idx, doc in enumerate(docs):\n",
-    "    # 若已有 metadata，不处理\n",
-    "    if getattr(doc, \"meta_fields\", None):\n",
-    "        continue\n",
-    "\n",
-    "    if idx >= len(raw_data):\n",
-    "        print(f\"Warning: 原始数据不足，跳过 index {idx}\")\n",
-    "        continue\n",
-    "    \n",
-    "    # 更新文档的 metadata 和 parser_config\n",
-    "    doc.update({\n",
-    "        \"meta_fields\": {\n",
-    "            \"id\": cnt - idx - 1\n",
-    "        },\n",
-    "        \"chunk_method\": \"one\"\n",
-    "    })\n",
-    "\n",
-    "print(\"Update finished\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "d6729847",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['b97f606e6bb811f0b3c30242ac180002',\n",
+       " 'b97e15ec6bb811f0b3c30242ac180002',\n",
+       " 'b97ccd7c6bb811f0b3c30242ac180002',\n",
+       " 'b97b7fda6bb811f0b3c30242ac180002',\n",
+       " 'b97a0f606bb811f0b3c30242ac180002',\n",
+       " 'b978bfa26bb811f0b3c30242ac180002',\n",
+       " 'b97777326bb811f0b3c30242ac180002',\n",
+       " 'b976187e6bb811f0b3c30242ac180002',\n",
+       " 'b974d1ee6bb811f0b3c30242ac180002',\n",
+       " 'b97373e46bb811f0b3c30242ac180002',\n",
+       " 'b9721ee06bb811f0b3c30242ac180002',\n",
+       " 'b970d2386bb811f0b3c30242ac180002',\n",
+       " 'b96f6ba06bb811f0b3c30242ac180002',\n",
+       " 'b96e1ffc6bb811f0b3c30242ac180002',\n",
+       " 'b96cc77e6bb811f0b3c30242ac180002',\n",
+       " 'b96b53766bb811f0b3c30242ac180002',\n",
+       " 'b969df286bb811f0b3c30242ac180002',\n",
+       " 'b96894ec6bb811f0b3c30242ac180002',\n",
+       " 'b96722c46bb811f0b3c30242ac180002',\n",
+       " 'b965b6dc6bb811f0b3c30242ac180002',\n",
+       " 'b96434ce6bb811f0b3c30242ac180002',\n",
+       " 'b96254e26bb811f0b3c30242ac180002',\n",
+       " 'b9604e7c6bb811f0b3c30242ac180002']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "docs = dataset.list_documents()\n",
     "doc_ids = [doc.id for doc in docs]\n",
@@ -176,89 +112,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "3e0eaec9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# delete documents\n",
-    "\n",
-    "dataset.delete_documents(doc_ids)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "f269d1ed",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "Exception",
-     "evalue": "Can't parse document that is currently being processed",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mException\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[10]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# parse documents\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m \u001b[43mdataset\u001b[49m\u001b[43m.\u001b[49m\u001b[43masync_parse_documents\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdoc_ids\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/opt/anaconda3/envs/ragflow/lib/python3.12/site-packages/ragflow_sdk/modules/dataset.py:86\u001b[39m, in \u001b[36mDataSet.async_parse_documents\u001b[39m\u001b[34m(self, document_ids)\u001b[39m\n\u001b[32m     84\u001b[39m res = res.json()\n\u001b[32m     85\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m res.get(\u001b[33m\"\u001b[39m\u001b[33mcode\u001b[39m\u001b[33m\"\u001b[39m) != \u001b[32m0\u001b[39m:\n\u001b[32m---> \u001b[39m\u001b[32m86\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m(res.get(\u001b[33m\"\u001b[39m\u001b[33mmessage\u001b[39m\u001b[33m\"\u001b[39m))\n",
-      "\u001b[31mException\u001b[39m: Can't parse document that is currently being processed"
-     ]
-    }
-   ],
-   "source": [
-    "# parse documents\n",
-    "\n",
-    "dataset.async_parse_documents(doc_ids)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "0626d395",
+   "execution_count": null,
+   "id": "db3bc917",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "开始检索测试...\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'RAGFlow' object has no attribute 'retrieval_test'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[10]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# 调用retrieval_test API\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m开始检索测试...\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m result = \u001b[43mrag_object\u001b[49m\u001b[43m.\u001b[49m\u001b[43mretrieval_test\u001b[49m(\n\u001b[32m      4\u001b[39m     kb_id=dataset.id,\n\u001b[32m      5\u001b[39m     question=\u001b[33m\"\u001b[39m\u001b[33mWhat is the main topic of this document?\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m      6\u001b[39m     top_k=\u001b[32m3\u001b[39m,\n\u001b[32m      7\u001b[39m     similarity_threshold=\u001b[32m0.2\u001b[39m\n\u001b[32m      8\u001b[39m )\n\u001b[32m     10\u001b[39m \u001b[38;5;66;03m# 打印结果\u001b[39;00m\n\u001b[32m     11\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m检索结果:\u001b[39m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[31mAttributeError\u001b[39m: 'RAGFlow' object has no attribute 'retrieval_test'"
+      "[<ragflow_sdk.modules.chunk.Chunk object at 0x104bd0a10>, <ragflow_sdk.modules.chunk.Chunk object at 0x1063debd0>, <ragflow_sdk.modules.chunk.Chunk object at 0x106107050>, <ragflow_sdk.modules.chunk.Chunk object at 0x10620b830>, <ragflow_sdk.modules.chunk.Chunk object at 0x106147800>, <ragflow_sdk.modules.chunk.Chunk object at 0x10624b6e0>]\n"
      ]
     }
    ],
    "source": [
-    "# 调用retrieval_test API\n",
-    "print(\"\\n开始检索测试...\")\n",
-    "result = rag_object.retrieval_test(\n",
-    "    kb_id=dataset.id,\n",
-    "    question=\"What is the main topic of this document?\",\n",
-    "    top_k=3,\n",
-    "    similarity_threshold=0.2\n",
-    ")\n",
-    "\n",
-    "# 打印结果\n",
-    "print(\"\\n检索结果:\")\n",
-    "for idx, chunk in enumerate(result.get('chunks', [])):\n",
-    "    print(f\"[{idx+1}] 相似度: {chunk['score']:.4f}\")\n",
-    "    print(f\"文档片段: {chunk['content']}\")\n",
-    "    print(f\"来源文档: {chunk['doc_name']}\")\n",
-    "    print(\"-\"*80)"
+    "def retrieve_tests(question, ds=dataset):\n",
+    "    # rag = RAGFlow(API_KEY, HOST_ADDRESS)\n",
+    "    rag = rag_object\n",
+    "    chunks = rag.retrieve(dataset_ids=[ds.id], top_k=3, similarity_threshold=0.2,vector_similarity_weight=0.3,question=question,document_ids=[],page=1,page_size=10)\n",
+    "    return chunks\n",
+    "chunks = retrieve_tests(question=\"What is Grant?\")\n",
+    "print(chunks)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
+   "id": "633be9f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'available': True, 'content': 'Grant\\'s First Stand\\nGrant\\'s First Stand is the debut album by American jazz guitarist Grant Green featuring performances by Green recorded and released on the Blue Note label in 1961. Earlier recordings made by Green for Blue Note were released as \"First Session\" in 2001.', 'create_time': '', 'create_timestamp': 0.0, 'dataset_id': '44bfe99268cf11f0a7220242ac180006', 'document_id': 'b9604e7c6bb811f0b3c30242ac180002', 'document_name': '', 'id': '67665450dc9eb4c6', 'important_keywords': [], 'questions': []}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(chunks[0])\n",
+    "len(chunks)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "56b0f8d6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "589ef527",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "398b8201",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "939abbd6",
    "metadata": {},
    "outputs": [
@@ -271,13 +202,13 @@
       "  \"data\": [\n",
       "    {\n",
       "      \"avatar\": \"\",\n",
-      "      \"chunk_count\": 87,\n",
+      "      \"chunk_count\": 42,\n",
       "      \"chunk_method\": \"naive\",\n",
       "      \"create_date\": \"Fri, 01 Aug 2025 22:00:09 GMT\",\n",
       "      \"create_time\": 1754056809917,\n",
       "      \"created_by\": \"34bdfbec68cf11f080d70242ac180006\",\n",
       "      \"description\": null,\n",
-      "      \"document_count\": 6,\n",
+      "      \"document_count\": 3,\n",
       "      \"embedding_model\": \"text-embedding-3-small@OpenAI\",\n",
       "      \"id\": \"d63690cc6edf11f0b3df0242ac180003\",\n",
       "      \"language\": \"English\",\n",
@@ -301,9 +232,9 @@
       "      \"similarity_threshold\": 0.2,\n",
       "      \"status\": \"1\",\n",
       "      \"tenant_id\": \"34bdfbec68cf11f080d70242ac180006\",\n",
-      "      \"token_num\": 45006,\n",
-      "      \"update_date\": \"Fri, 01 Aug 2025 22:49:00 GMT\",\n",
-      "      \"update_time\": 1754059740658,\n",
+      "      \"token_num\": 26298,\n",
+      "      \"update_date\": \"Wed, 06 Aug 2025 18:12:47 GMT\",\n",
+      "      \"update_time\": 1754475167050,\n",
       "      \"vector_similarity_weight\": 0.3\n",
       "    },\n",
       "    {\n",
@@ -385,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "6d75a0b8",
    "metadata": {},
    "outputs": [
@@ -432,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "01594292",
    "metadata": {},
    "outputs": [
@@ -449,7 +380,7 @@
        "'<!DOCTYPE html>\\n<html>\\n<head>\\n<meta charset=\"utf-8\">\\n<meta name=\"viewport\" content=\"width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0\">\\n<meta http-equiv=\"X-UA-Compatible\" content=\"ie=edge\">\\n<link rel=\"shortcut icon\" href=\"/logo.svg\">\\n<title>RAGFlow</title>\\n<link rel=\"stylesheet\" href=\"/umi.0503d813.css\">\\n<script defer src=\"/iconfont.js\"></script>\\n</head>\\n<body>\\n<div id=\"root\"></div>\\n<script src=\"/umi.3cb0f58d.js\"></script>\\n</body>\\n</html>'"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,10 +414,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "e5e35587",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'app' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[10]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m rule \u001b[38;5;129;01min\u001b[39;00m \u001b[43mapp\u001b[49m.url_map.iter_rules():\n\u001b[32m      2\u001b[39m     \u001b[38;5;28mprint\u001b[39m(rule.endpoint, rule.methods, rule.rule)\n",
+      "\u001b[31mNameError\u001b[39m: name 'app' is not defined"
+     ]
+    }
+   ],
    "source": [
     "for rule in app.url_map.iter_rules():\n",
     "    print(rule.endpoint, rule.methods, rule.rule)"
